--- a/Admin/css/style.css
+++ b/Admin/css/style.css
@@ -754,9 +754,17 @@ select{
 	margin: 0;
 	padding: 0;
 	padding-right: 10px;
-	background-color: transparent;
+	background-color: #a1ca4a;
 	width: 100%;
 	font-size: 20px;
+	color: #fff;
+	border: 0;
+}
+
+#searchbar input:focus,
+#searchbar input:active,
+#searchbar input:hover{
+	background-color: #a1ca4a;
 	color: #fff;
 	border: 0;
 }
