--- a/Admin/css/style.css
+++ b/Admin/css/style.css
@@ -57,9 +57,10 @@ select{
 	margin-right: 0;
 	background-color: #FFFFFF;
 	border: 1px solid #dedede;
-	overflow-x: auto !important;
-	overflow-y: auto !important;
+	/*overflow-x: auto !important;
+	overflow-y: auto !important;*/
 	padding: 0;
+	position: relative;
 }
 
 #menu #categorias,
@@ -245,8 +246,9 @@ select{
 	font-size: 20px;
 	padding: 2px;
 	color: #000;
+	vertical-align: middle;
+	height: 28px;
 	background-color: #D5D4D5; /*ie8*/
-
 	background-color: rgba(117, 114, 115, .3);
 	border-bottom: 1px solid rgba(117, 114, 115, .4);+
 }
@@ -286,8 +288,6 @@ select{
 	width: 45%;
 }
 
-.datos #buscar-disponibles,
-.datos #buscar-seleccionadas,
 .busqueda,
 .busqueda-avanzada{
 	padding: 0;
@@ -302,7 +302,6 @@ select{
 }
 
 .busqueda .buscador {
-	/*display: none;*/
 	display: block;
 	margin: 0 auto;
 	margin-top: 0;
@@ -328,38 +327,6 @@ select{
 	border-bottom-left-radius: 5px;
 	
 	padding: 5px;
-	font-size: 18px;
-	font-weight: bold;
-	text-align: center;
-}
-
-.datos #buscar-disponibles input,
-.datos #buscar-seleccionadas input{
-	display: none;
-	margin: 0 auto;
-	margin-top: 0;
-	width: 80%;
-	background-color: #C8C7C7; /*para ie8*/
-	background-color: rgba(117, 114, 115, .4);
-
-	border-left: 1px solid rgba(117, 114, 115, 1);
-	border-right: 1px solid rgba(117, 114, 115, 1);
-	border-top: 0 solid transparent;
-	border-bottom: 1px solid rgba(117, 114, 115, 1);
-
-	color: #757273;
-		-o-border-radius-bottomright: 5px;
-		-o-border-radius-bottomleft: 5px;
-		-ms-border-radius-bottomright: 5px;
-		-ms-border-radius-bottomleft: 5px;
-		-moz-border-radius-bottomright: 5px;
-		-moz-border-radius-bottomleft: 5px;
-		-webkit-border-bottom-right-radius: 5px;
-		-webkit-border-bottom-left-radius: 5px;
-	border-bottom-right-radius: 5px;
-	border-bottom-left-radius: 5px;
-	
-	padding: 2px;
 	font-size: 18px;
 	font-weight: bold;
 	text-align: center;
@@ -391,19 +358,6 @@ select{
 .buscador input[type="text"]:focus,
 .buscador input[type="text"]:hover{
 	color: #FFFFFF;
-}
-
-.datos #buscar-disponibles input:hover,
-.datos #buscar-seleccionadas input:hover,
-.datos #buscar-disponibles input:active,
-.datos #buscar-seleccionadas input:active,
-.datos #buscar-disponibles input:focus,
-.datos #buscar-seleccionadas input:focus,
-.busqueda:hover .buscador,
-.busqueda:active .buscador{
-	color: #FFFFFF;
-	background-color: #757273; /*para ie8*/
-	background-color: rgba(117, 114, 115, .7);
 }
 
 .datos #normas-categoria ul li:hover{
@@ -481,6 +435,12 @@ select{
 .datos-botones{
 	margin-top: 20px;
 	margin-bottom: 20px;
+	text-align: center;
+}
+
+.menu-botones{
+	margin-top: 5px;
+	margin-bottom: 5px;
 	text-align: center;
 }
 
@@ -759,6 +719,12 @@ select{
 	font-size: 20px;
 	color: #fff;
 	border: 0;
+
+		-o-appearance: none;
+		-ms-appearance: none;
+		-moz-appearance: none;
+		-webkit-appearance: none;
+	appearance: none;
 }
 
 #searchbar input:focus,
@@ -768,6 +734,12 @@ select{
 	color: #fff;
 	border: 0;
 	outline: none;
+
+		-o-appearance: none;
+		-ms-appearance: none;
+		-moz-appearance: none;
+		-webkit-appearance: none;
+	appearance: none;
 }
 
 #search #buscar{
