--- a/Admin/css/style.css
+++ b/Admin/css/style.css
@@ -21,6 +21,10 @@ a {outline:none; text-decoration: none; }
 	filter: none;
 }
 
+b{
+	font-weight: bold;
+}
+
 /*END RESET ---------------------------*/
 
 html, body{
@@ -149,14 +153,25 @@ select{
 .list li{
 	padding: 5px;
 	text-align: center;
-	font-family: 20px;
+	font-size: 20px;
+	cursor: pointer;
+	border-bottom: 1px solid #dedede;
+}
+
+.listIzquierda li{
+	padding: 5px;
+	text-align: left;
+	font-size: 20px;
 	cursor: pointer;
 	border-bottom: 1px solid #dedede;
 }
 
 .list li:hover,
 .list li:focus,
-.list li:active{
+.list li:active,
+.listIzquierda li:hover,
+.listIzquierda li:focus,
+.listIzquierda li:active{
 	background-color: #D5D4D5;
 }
 
@@ -1225,63 +1240,51 @@ select{
 /**
  * PREVIEW
  */
- .preview{
+.preview{
  	width: 100%;
  	display: block;
  	border-collapse: collapse;
- }
-.preview .datos-preview{
+}
+
+.datos-preview{
 	width: 100%;
 	display: block;
+	border: 0;
+	overflow: hidden;
 }
 
-.preview .datos-preview #normas,
-.preview .datos-preview #articulos{
-	text-align: center;
-	font-size: 20px;
+.panel{
+	display: inline-block;
+}
+
+#panelNormas{
 	padding: 0;
-}
-
-.preview .datos-preview #normas li,
-.preview .datos-preview #articulos li{
-	padding-top: 5px;
-	padding-bottom: 5px;
-	border-bottom: 1px solid #dedede;
-}
-
-.preview .preview-botones{
+	margin: 0;
 	width: 100%;
-	position: fixed;
-	bottom: 0;
-	text-align: center;
-}
-
-.preview .titulo{
-	display: inline-block;
-	width: 100%;
-	border-bottom: 0px solid transparent !important;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	font-weight: bold;
-}
-
-.preview #normas{
-	width: 100%;
-	display: inline-block;
 	float: left;
 }
 
-.preview #articulos{
-	width: 0%;
-	display: inline-block;
+#panelArticulos{
+	padding: 0;
+	margin: 0;
+	width: 0;
 	float: right;
+	display: none;
+}
+
+#panelArticuloDatos{
+	padding: 0;
+	margin: 0;
+	width: 0;
+	float: right;
+	display: none;
 }
 
 /**
 * COMPONER MAIL
 */
 .tabla-mail{
-	width: 100%;
+	width: 98%;
 	border: 0;
 	border-collapse: collapse;
 	font-size: 16px;
