--- a/Admin/css/login.css
+++ b/Admin/css/login.css
@@ -284,3 +284,15 @@ html, body{
 	border-style:solid;
 	border-width:15px 15px 15px 0;		
 }
+
+#usuario{
+	background-image:url('../images/user.png');
+	background-repeat:no-repeat;
+	background-position: 10px center; 
+}
+
+#password{
+	background-image:url('../images/key.png');
+	background-repeat:no-repeat;
+	background-position: 10px center; 
+}
