--- a/Admin/css/style.css
+++ b/Admin/css/style.css
@@ -139,11 +139,7 @@ select{
 .seleccionada{
 	border: solid 1px #A1CA4A;
 	background-color: #A1CA4A;
-<<<<<<< HEAD
 	color: #fff !important;
-=======
-	color: #fff;
->>>>>>> 8a86dd0de1f1b929444f0717a95f9060ec61a197
 }
 
 .grupo{
@@ -1119,6 +1115,76 @@ select{
 	display: block;
 }
 
+/**
+* COMENTARIOs
+*/
+.tabla-comentario{
+	width: 100%;
+	margin: 0 auto;
+	margin-bottom: 20px;
+}
+
+.tabla-comentario tr{
+	border-bottom: 1px solid #DEDEDE;
+	padding-bottom: 5px;
+}
+
+.tabla-comentario tr:hover{
+	border-bottom: 1px solid #A1CA4A;
+}
+
+.tabla-comentario td{
+	padding-bottom: 5px;
+}
+
+.tabla-comentario td span{
+	display: block;
+	margin: 0 auto;
+	text-align: center;
+} 
+
+.tabla-comentario .datos-usuario{
+	width: 60px;
+	text-align: center;
+	padding-left: 10px;
+}
+
+.datos-usuario .imagen{
+	float: right;
+	display: inline-block;
+	width: 60px;
+}
+
+.datos-usuario .imagen img{
+	height: 60px;
+}
+
+.img-wrapper{
+	height:60px; 
+	width:60px; 
+	border-radius:60px; 
+	border:4px solid white; 
+	overflow:hidden;
+	margin: 0 auto;
+
+		-o-transition: all 6s ease-out;
+		-ms-transition: all 6s ease-out;
+		-moz-transition: all 6s ease-out;
+		-webkit-transition: all 6s ease-out;
+	transition: all 6s ease-out;
+}
+
+.tabla-comentario .comentario-usuario{
+	font-size: 16px;
+	text-align: left;
+	vertical-align: middle;
+	padding-left: 20px;
+}
+
+.comentario-usuario span{
+	float: right;
+	margin-right: 10px !important;
+}
 
 /**
 * RESULTADOS BUSQUEDA 
