--- a/Admin/css/style.css
+++ b/Admin/css/style.css
@@ -1125,12 +1125,16 @@ select{
 }
 
 .tabla-comentario tr{
-	border-bottom: 1px solid #DEDEDE;
+	border-bottom: 2px solid #DEDEDE;
 	padding-bottom: 5px;
 }
 
 .tabla-comentario tr:hover{
-	border-bottom: 1px solid #A1CA4A;
+	border-bottom: 2px solid #A1CA4A;
+}
+
+.tabla-comentario tr:hover .img-wrapper{
+	border: 4px solid #A1CA4A; 
 }
 
 .tabla-comentario td{
