--- a/Admin/css/style.css
+++ b/Admin/css/style.css
@@ -1126,7 +1126,6 @@ select{
 
 .tabla-comentario tr{
 	border-bottom: 2px solid #DEDEDE;
-	padding-bottom: 5px;
 }
 
 .tabla-comentario tr:hover{
@@ -1138,6 +1137,7 @@ select{
 }
 
 .tabla-comentario td{
+	padding-top: 5px;
 	padding-bottom: 5px;
 }
 
@@ -1148,9 +1148,8 @@ select{
 } 
 
 .tabla-comentario .datos-usuario{
-	max-width: 120px;
+	max-width: 80px;
 	text-align: center;
-	padding-left: 10px;
 }
 
 .datos-usuario .imagen{
