desarrollo, antes de poner panel en vista de usuario

--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ button:hover{
 }
 
 .disclaim{
-	
+	position: absolute;
 	height: 10%;
 	display: table;
 	vertical-align: middle;
@@ -505,7 +505,7 @@ button:hover{
 #td-categorias{
 	display: block;
 	overflow: auto;
-	width: 100%;
+	width: 100% !important;
 }
 
 /**
